# llm_odc

./: README.md  agent_mcp.py  pyproject.toml  serveur_mqqt_mcp.py  test_agent.ipynb  test_mcp.py  v1.ipynb  workshop.ipynb  workshop1.ipynb
