[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "langchain>=1.3.9",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "msgpack>=1.2.0",
    "network>=0.1",
    "notebook>=7.5.7",
    "paho-mqtt>=2.1.0",
]
